# Xenobuild

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Xenobuild.yaml  borc-package.json  bork.yaml  package.bok.json  package.bok.yaml  package.borc  package.borc.json  sonar-project.properties
component/bok/: CMakeLists.txt  component.bok.json
component/bok/src/: Main.cpp  main.cpp
component/bok/src/bok/cli/: BuildController.cpp  BuildController.hpp  BuildController2.cpp  BuildController2.hpp  ConfigureController.cpp  ConfigureController.hpp  ControllerFactory.cpp  ControllerStub.hpp  InitController.cpp
component/borc/: CMakeLists.txt  bork.yaml  module.bok.yaml
component/borc/src/: Main.cpp
component/borc/src/borc/cli/: Controller.hpp  ControllerFactory.cpp  ControllerFactory.hpp  ControllerStub.hpp
component/borc/src/borc/common/: BuildConfiguration.cpp  BuildConfiguration.hpp  Constants.cpp  Constants.hpp  Types.hpp
component/borc/src/borc/core/: Core.cpp  Core.hpp  DependencyGraph.hpp
component/borc/src/borc/entity/: ComponentEntity.hpp  Decoder.hpp  LanguageEntity.hpp  ModuleEntity.hpp  PackageEntity.hpp  PackageEntity2.hpp  ToolchainEntity.hpp  YamlModel.hpp
component/borc/src/borc/model/: BuildPipeline.cpp  BuildPipeline.hpp  Command.cpp  Command.hpp  CommandFactory.cpp  CommandFactory.hpp  Context.hpp  Language.hpp  Module.hpp  ModuleLinkerMatcher.hpp  Package.hpp  PackageRegistry.cpp  PackageRegistry.hpp  PackageRegistryFactory.cpp  PackageRegistryFactory.hpp  Source.hpp  SourceCompilerMatcher.hpp  Version.cpp  Version.hpp
component/borc/src/borc/parsing/: Decoder.hpp  Encoder.hpp  EntityMapper.hpp  JSONSerializer.hpp  JsonModel.hpp  YamlModel.hpp
component/borc/src/borc/services/: BuildService.cpp  BuildService.hpp  BuildServiceImpl.hpp  FileService.cpp  FileService.hpp  FileServiceImpl.cpp  FileServiceImpl.hpp  LoggingService.cpp  LoggingService.hpp  LoggingServiceImpl.hpp  PackageService.cpp  PackageService.hpp  PackageServiceImpl.cpp  PackageServiceImpl.hpp  ToolchainService.hpp  ToolchainServiceImpl.cpp  ToolchainServiceImpl.hpp
component/borc/src/borc/toolchain/: ArchiveLinker.cpp  ArchiveLinker.hpp  CompileOptions.hpp  Compiler.cpp  Compiler.hpp  CompilerImpl.cpp  CompilerImpl.hpp  CompilerVersionDetector.cpp  CompilerVersionDetector.hpp  GCCCompilerVersionDetector.cpp  Linker.cpp  Linker.hpp  LinkerImpl.hpp  ManagedToolchainImpl.hpp  ModuleChecker.cpp  ModuleChecker.hpp  ModuleLinker.cpp  ModuleLinker.hpp  ModuleTypeChecker.cpp  ModuleTypeChecker.hpp  ServiceFactory.cpp  ServiceFactory.hpp  ServiceFactoryGCC.cpp  ServiceFactoryStub.cpp  ServiceFactoryStub.hpp  ServiceFactoryVC.cpp  SourceChecker.cpp  SourceChecker.hpp  Toolchain.hpp  ToolchainFactory.cpp  ToolchainFactory.hpp  ToolchainFactoryFS.cpp  ToolchainFactoryFS.hpp  ToolchainFactoryHardcoded.cpp  ToolchainFactoryImpl.cpp  ToolchainImpl.hpp
component/borc/src/borc/utility/: Dag.cpp  Dag.hpp  DagNode.cpp  DagNode.hpp  DagVisitor.hpp
component/core/: CMakeLists.txt
component/core-entity-test/: CMakeLists.txt
component/core-test/: CMakeLists.txt  README.md
component/core-test/borc/core/: CoreTest.cpp
component/core-test/borc/core/package/: ComponentTest.cpp  PackageTest.cpp  VersionTest.cpp
component/core/borc/core/: Command.hpp
component/core/borc/core/package/: Component.cpp  Component.hpp  Package.cpp  Package.hpp  Version.cpp  Version.hpp
component/core/borc/core/pipeline/: Matcher.cpp  Matcher.hpp  Pipe.cpp  Pipe.hpp  Pipeline.cpp  Pipeline.hpp  RegexMatcher.cpp  RegexMatcher.hpp
component/feature/: CMakeLists.txt
component/utility/: CMakeLists.txt
component/utility/src/: string.cpp
modules/borc/: CMakeLists.txt  borc-artifact.json  module.borc
modules/borc-core/: CMakeLists.txt  borc-artifact.json  module.borc  module.borc.json
modules/borc/src/: Main.cpp
modules/core/: CMakeLists.txt
modules/core-entity/: CMakeLists.txt
modules/core-package/: CMakeLists.txt
modules/core-package/src/: Context.cpp  FSPackageFactory.cpp  Module.cpp  PackageFactory_FS.cpp  PackageRegistry.cpp  Source.cpp  SourceCompilerMatcher.cpp
modules/core-pipeline/: CMakeLists.txt
modules/core-pipeline/src/: BuildCacheFileSystem.cpp  BuildTaskGraphGenerator.cpp  DiskFileScanner.cpp  FileScanner.cpp  TaskGraphGenerator_Build.cpp
modules/core-toolchain/: CMakeLists.txt
modules/core-toolchain-clang/: CMakeLists.txt
modules/core-toolchain-gcc/: CMakeLists.txt
modules/core-toolchain-gcc/src/: ServiceFactoryGCC.cpp
modules/core-toolchain/src/: ArchiveLinker.cpp  CompilerImpl.cpp  CompilerMock.cpp  Compiler_Mock.cpp  LinkerImpl.cpp  LinkerMock.cpp  Linker_Archive.cpp  Linker_Mock.cpp  Linker_Module.cpp  ManagedToolchainImpl.cpp  ModuleLinker.cpp  ModuleTypeChecker.cpp  ServiceFactory.cpp  ServiceFactoryStub.cpp  SourceChecker.cpp  ToolchainFactoryFS.cpp  ToolchainFactoryHardcoded.cpp  ToolchainFactory_FS.cpp  ToolchainFactory_Hardcoded.cpp  ToolchainFactory_Mock.cpp  ToolchainImpl.cpp  ToolchainMock.cpp  ToolchainServiceImpl.cpp  Toolchain_Mock.cpp
modules/core/src/: CommandFactory.cpp  Constants.cpp  DagNode.cpp  FileService_FS.cpp  FolderCommand.cpp  Logger_Console.cpp  SystemCommand.cpp  Version.cpp
src/Xenobuild/: CMakeLists.txt  README.md
src/Xenobuild/include/Xenobuild/: BuildController.h  Common.h  ConfigureController.h  Controller.h  ControllerFactory.h  SetupController.h  Xenobuild.h
src/Xenobuild/src/: BuildController.cpp  ConfigureController.cpp  SetupController.cpp  main.cpp
src/Xenobuild/test/: CMakeLists.txt
src/build-core/: CMakeLists.txt
src/build-core/src/: Command.cpp  CommandFactory.cpp  Command_Folder.cpp  Command_System.cpp  Constants.cpp  Dag.cpp  DagNode.cpp  DagVisitor.cpp  FileService.cpp  FileService_FS.cpp  Logger.cpp  Logger_Console.cpp  Version.cpp
src/core/: CMakeLists.txt
src/core/src/: CMakeBuildSystem.cpp  Command.cpp  Dependency.cpp  DependencyManager.cpp  FileSystemPackageFactory.cpp  Package.cpp  PackageManager.cpp  Toolchain.cpp  ToolchainType.cpp  Util.cpp
src/xenobuild/: CMakeLists.txt
(+514 files in other folders)
