
include_directories("../borc-core/include")

find_package(Boost
    REQUIRED
    COMPONENTS filesystem
)
include_directories(${Boost_INCLUDE_DIRS})
link_directories(${Boost_LIBRARY_DIRS})

find_package(nlohmann_json REQUIRED)

add_library(borc-core 
    "include/borc/model/Source.hpp"
    "include/borc/model/Artifact.hpp"
    "include/borc/model/Package.hpp"
    "include/borc/model/Context.hpp"
    "include/borc/model/Command.hpp"
    "include/borc/model/CommandFactory.hpp"
    "include/borc/entity/LanguageEntity.hpp"
    "include/borc/entity/ModuleEntity.hpp"
    "include/borc/entity/PackageEntity.hpp"
    "include/borc/parsing/JSONDeserializer.hpp"
    "include/borc/parsing/JSONSerializer.hpp"
    "include/borc/services/FileService.hpp"
    "include/borc/services/FileServiceImpl.hpp"
    "include/borc/services/LoggingService.hpp"
    "include/borc/services/LoggingServiceImpl.hpp"
    "include/borc/services/BuildService.hpp"
    "include/borc/services/BuildServiceImpl.hpp"
    "include/borc/utility/MetaProperty.hpp"
    "include/borc/utility/Dag.hpp"
    "include/borc/utility/DagNode.hpp"
    "include/borc/utility/DagVisitor.hpp"
    "include/borc/toolchain/CompileOptions.hpp"
    "include/borc/toolchain/Compiler.hpp"
    "include/borc/toolchain/Linker.hpp"
    "include/borc/toolchain/Toolchain.hpp"
    "include/borc/toolchain/ToolchainFactory.hpp"
    "include/borc/toolchain/ServiceFactory.hpp"
    "include/borc/toolchain/ArtifactChecker.hpp"
    "include/borc/toolchain/SourceChecker.hpp"
    "include/borc/build/BuildCache.hpp"
    "include/borc/build/BuildCacheFactory.hpp"

    "src/borc/model/Source.cpp"
    "src/borc/model/Artifact.cpp"
    "src/borc/model/Package.cpp"
    "src/borc/model/Context.cpp"
    "src/borc/model/Command.cpp"
    "src/borc/model/CommandFactory.cpp"
    "src/borc/model/command/SystemCommand.hpp"
    "src/borc/model/command/SystemCommand.cpp"
    "src/borc/model/command/FolderCommand.hpp"
    "src/borc/model/command/FolderCommand.cpp"
    "src/borc/services/BuildService.cpp"
    "src/borc/services/BuildServiceImpl.cpp"
    "src/borc/services/FileService.cpp"
    "src/borc/services/FileServiceImpl.cpp"
    "src/borc/services/LoggingService.cpp"
    "src/borc/services/LoggingServiceImpl.cpp"
    "src/borc/utility/Dag.cpp"
    "src/borc/utility/DagNode.cpp"
    "src/borc/utility/DagVisitor.cpp"
    "src/borc/toolchain/CompileOptions.cpp"
    "src/borc/toolchain/Compiler.cpp"
    "src/borc/toolchain/CompilerImpl.hpp"
    "src/borc/toolchain/CompilerImpl.cpp"
    "src/borc/toolchain/Linker.cpp"
    "src/borc/toolchain/Linker.cpp"
    "src/borc/toolchain/ArchiveLinker.cpp"
    "src/borc/toolchain/ArchiveLinker.cpp"
    "src/borc/toolchain/LinkerImpl.hpp"
    "src/borc/toolchain/LinkerImpl.cpp"
    "src/borc/toolchain/Toolchain.cpp"
    "src/borc/toolchain/ToolchainImpl.hpp"
    "src/borc/toolchain/ToolchainImpl.cpp"
    "src/borc/toolchain/ToolchainFactory.cpp"
    "src/borc/toolchain/ServiceFactory.cpp"
    "src/borc/toolchain/ServiceFactoryStub.hpp"
    "src/borc/toolchain/ServiceFactoryStub.cpp"
    "src/borc/toolchain/ServiceFactoryGCC.hpp"
    "src/borc/toolchain/ServiceFactoryGCC.cpp"
    "src/borc/toolchain/ServiceFactoryVC.hpp"
    "src/borc/toolchain/ServiceFactoryVC.cpp"
    "src/borc/toolchain/ArtifactChecker.cpp"
    "src/borc/toolchain/SourceChecker.cpp"
    "src/borc/toolchain/ArtifactTypeChecker.hpp"
    "src/borc/toolchain/ArtifactTypeChecker.cpp"
    "src/borc/build/BuildCache.cpp"
    "src/borc/build/BuildCacheFactory.cpp"
    "src/borc/build/BuildCacheImpl.cpp"
    "src/borc/build/BuildCacheImpl.hpp"
)

target_link_libraries(borc-core ${Boost_LIBRARIES} nlohmann_json::nlohmann_json)
